--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,6 +20,7 @@
     "flash": "^1.1.0",
     "fs-extra": "^11.2.0",
     "handlebars": "^4.7.8",
+    "joi": "^17.13.3",
     "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.15",
