--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "gsap": "^3.12.5",
     "history": "^5.3.0",
     "js-cookie": "^3.0.5",
+    "lottie-react": "^2.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
