--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,13 +17,17 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-session": "^1.18.1",
     "flash": "^1.1.0",
     "fs-extra": "^11.2.0",
+    "google-auth-library": "^9.15.0",
     "handlebars": "^4.7.8",
     "joi": "^17.13.3",
     "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.15",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "uuid": "^11.0.3"
   }
 }
