--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@react-oauth/google": "^0.12.1",
     "animate.css": "^4.1.1",
     "axios": "^1.7.7",
     "crypto-js": "^4.2.0",
@@ -18,6 +19,7 @@
     "gsap": "^3.12.5",
     "history": "^5.3.0",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
