--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/html": "^1.13.1",
+    "@cloudinary/url-gen": "^1.21.0",
     "@gsap/react": "^2.1.1",
+    "@lottiefiles/dotlottie-react": "^0.12.1",
     "@react-oauth/google": "^0.12.1",
     "animate.css": "^4.1.1",
     "axios": "^1.7.7",
@@ -20,6 +23,7 @@
     "history": "^5.3.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "lodash.debounce": "^4.0.8",
     "lottie-react": "^2.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
