--- a/Backend/package.json
+++ b/Backend/package.json
@@ -29,6 +29,7 @@
     "nodemailer": "^6.9.15",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "socket.io": "^4.8.1",
     "uuid": "^11.0.3"
   }
 }
