--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.7",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
+    "framer-motion": "^12.4.3",
     "gsap": "^3.12.5",
     "history": "^5.3.0",
     "js-cookie": "^3.0.5",
@@ -28,7 +29,9 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.2",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
