feat: Refactor species and breeds routes and controllers
- Moved species-related logic to SpeciesController and added new endpoints for fetching species hierarchy and details.
- Updated the species route to utilize the new controller methods.
- Implemented breed fetching by species in BreedsController, allowing for both species ID and name.
- Enhanced the seedBreeds script to ensure species exist before seeding breeds, and improved error handling.
- Added age normalization and formatting utility functions for better age management in posts.
- Integrated Cloudinary configuration for image uploads.
- Updated frontend components to handle species and breeds more efficiently, including loading states and improved user experience.
- Added new API endpoints for fetching species hierarchy and breeds by species.

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -9,3 +9,24 @@ SERVER_URL =
 GOOGLE_CLIENT_ID =
 SERVER_URL =
 SESSION_SECRET =
+
+# Database Configuration
+DATABASE_URL=mongodb://localhost:27017/pickMyPit
+MONGODB_URI=mongodb://localhost:27017/pickMyPit
+
+# Server Configuration
+PORT=5000
+NODE_ENV=development
+SERVER_URL=http://localhost:5000
+FRONTEND_URL=http://localhost:3000
+
+# JWT Secret
+JWT_SECRET=your_jwt_secret_key
+
+# Cloudinary Configuration
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
+
+# Crypto Key (for encryption)
+CRYPTO_KEY=your_crypto_secret_key
