feat: Update environment variables and enhance image upload process with compression and progress tracking

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -20,13 +20,13 @@ NODE_ENV=development
 SERVER_URL=http://localhost:5000
 FRONTEND_URL=http://localhost:3000
 
-# JWT Secret
-JWT_SECRET=your_jwt_secret_key
+# JWT Settings
+JWT_SECRET=your_jwt_secret_key_replace_this
 
 # Cloudinary Configuration
-CLOUDINARY_CLOUD_NAME=your_cloud_name
-CLOUDINARY_API_KEY=your_api_key
-CLOUDINARY_API_SECRET=your_api_secret
+CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
+CLOUDINARY_API_KEY=your_cloudinary_api_key
+CLOUDINARY_API_SECRET=your_cloudinary_api_secret
 
-# Crypto Key (for encryption)
-CRYPTO_KEY=your_crypto_secret_key
+# Crypto Settings
+CRYPTO_KEY=your_crypto_secret_key_replace_this
