--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,6 @@
 VITE_REACT_APP_CRYPTO_KEY = "4f2bb10b0cadeb1b4f2bb10b0cadeb1b"
 VITE_REACT_APP_CLIENT_KEY="986277176343-lhv9f8ph2vfi4rru3qsoquccvdjbl1b7.apps.googleusercontent.com"
-VITE_REACT_APP_CLOULDAIRY_SIGN="pickmypet"
+VITE_REACT_APP_CLOULDAIRY_SIGN="295777375369772"
 VITE_REACT_APP_CLOULDDAIRY_NAME="drqnhnref'"
+VITE_REACT_APP_CLOULDDAIRY_KEY="yxIcb68RMTLXESOhiAOx5NJFVOQ"
+VITE_REACT_APP_CLOUDINARY_URL=cloudinary://295777375369772:yxIcb68RMTLXESOhiAOx5NJFVOQ@drqnhnref
