feat: Implement authentication middleware and user models
- Added authentication middleware for user and admin verification.
- Created user, admin, address, breed, post, species models with necessary fields and methods.
- Established routes for user and admin authentication.
- Integrated socket events for real-time notifications and messaging.
- Developed API service for handling requests with Axios in the frontend.
- Set up TypeScript configuration for better type safety and module resolution.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ pet-admin-dashboard/.next
 
 frontend.code-workspace
 pet-admin-dashboard.code-workspace
+Backend_v2/node_modules/uuid/dist/esm/bin/uuid
