--- a/Backend_v2/package.json
+++ b/Backend_v2/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
     "build": "tsc",
-    "dev": "ts-node-dev --respawn --loader ts-node/esm src/index.ts",
+    "dev": "tsx watch src/index.ts",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write .",
     "migrate": "ts-node ./src/migrations/migrate.ts"
@@ -49,6 +49,7 @@
     "@types/nodemailer": "^6.4.16",
     "@types/uuid": "^10.0.0",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.20.3",
     "typescript": "^5.6.3"
   }
 }
